crates/vize_atelier_sfc/src/rewrite_default/snapshots/vize_atelier_sfc__rewrite_default__tests__named_default_export.snap
---
source: crates/vize_atelier_sfc/src/rewrite_default/tests.rs
expression: result.as_str()
---
const a = 1
const _sfc_main = a
