crates/vize_atelier_sfc/src/rewrite_default/snapshots/vize_atelier_sfc__rewrite_default__tests__rewrite_default_async_generator_function.snap
---
source: crates/vize_atelier_sfc/src/rewrite_default/tests.rs
expression: result.as_str()
---
async function* load() { yield await next() }
const _sfc_main = load
