crates/vize_atelier_sfc/src/rewrite_default/snapshots/vize_atelier_sfc__rewrite_default__tests__rewrite_default_object.snap
---
source: crates/vize_atelier_sfc/src/rewrite_default/tests.rs
expression: result.as_str()
---
const _sfc_main = {}
